# Basic_openGLRayMarcher

./: CMakeLists.txt  README.md  frag.glsl  glad.c  main.cpp
imgui/: imgui_impl_opengl3.cpp
